--- a/src/app/user/add-novel/add-novel.component.html
+++ b/src/app/user/add-novel/add-novel.component.html
@@ -1,23 +1,8 @@
-<div class="col-md-11">
-  <div class="row">
-    <div class="col-md-6">
-
-    </div>
-    <div class="col-md-6">
-      <nb-card
-        style="margin-top:10%;border-radius: 0.5rem; box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12);">
+    <div class="uploadForm">
+      <nb-card>
         <nb-card-body style="padding: 2rem;">
           <form [formGroup]="novelform" (ngSubmit)="submitNovelForm()">
             <h3 class="text-center">Upload Novel</h3>
-            <!-- <div class="row mt-4">
-                          <div class="col-6">
-                              <button class="w-100" nbButton status="danger"><nb-icon icon="google"></nb-icon>GOOGLE</button>
-                          </div>
-                          <div class="col-6">
-                              <button class="w-100" nbButton status="primary"><nb-icon icon="facebook"></nb-icon>FACEBOOK</button>
-                          </div>
-                      </div>
-                      <h5 class="text-center mt-3">OR</h5> -->
             <div class="row mt-5">
               <div class="col-md-6">
                 <mat-form-field class="mt-2 w-100" appearance="outline">
@@ -65,7 +50,7 @@
                 </mat-form-field>
               </div>
               <hr>
-              <div class="col-md-6">
+              <div class="col-md-6 uploadBtn">
                 <label class="mt-2">Upload Image</label><br>
                 <input type="file" class="form-control" (change)="uploadNovel($event)">
               </div>
@@ -94,5 +79,3 @@
         </nb-card-body>
       </nb-card>
     </div>
-  </div>
-</div>
