add novel component

--- a/src/app/user/add-novel/add-novel.component.html
+++ b/src/app/user/add-novel/add-novel.component.html
@@ -51,7 +51,7 @@
               </div>
               <hr>
               <div class="col-md-6 uploadBtn">
-                <label class="mt-2">Upload Image</label><br>
+                <label class="mt-2 uploadLable"><B>Upload Image</B></label><br>
                 <input type="file" class="form-control" (change)="uploadNovel($event)">
               </div>
             </div>
