--- a/src/app/user/add-novel/add-novel.component.css
+++ b/src/app/user/add-novel/add-novel.component.css
@@ -9,6 +9,10 @@ nb-card{
   box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12);
 }
 
+.uploadLable{
+margin-left: 10rem;
+}
+
 .uploadBtn{
   margin-left: 12rem;
 }
