--- a/src/app/user/manage-user-orders/manage-user-orders.component.html
+++ b/src/app/user/manage-user-orders/manage-user-orders.component.html
@@ -6,7 +6,7 @@
             {{order.data.novel.title}}
           </nb-accordion-item-header>
           <nb-accordion-item-body>
-  
+
             {{order.created | date}}
             <hr>
             <!-- <p>{{novel.genre}}</p> -->
@@ -22,6 +22,29 @@
         </nb-accordion-item>
     </nb-accordion>
     </mat-tab>
-    
+
+    <mat-tab label="Purchased Novels">
+      <nb-accordion *ngIf="!loading">
+        <nb-accordion-item *ngFor="let order of ordersList">
+          <nb-accordion-item-header>
+            {{order.data.novel.title}}
+          </nb-accordion-item-header>
+          <nb-accordion-item-body>
+
+            {{order.created | date}}
+            <hr>
+            <!-- <p>{{novel.genre}}</p> -->
+            <hr>
+            <div class="col-md-4">
+              <img [src]="url+order.data.novel.avatar" class="img-fluid" alt="">
+            </div>
+            <hr>
+            <p class="price">{{order.data.novel.price | currency:'INR'}}</p>
+          <hr>
+
+          </nb-accordion-item-body>
+        </nb-accordion-item>
+    </nb-accordion>
+    </mat-tab>
+
   </mat-tab-group>
-  
