--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -60,7 +60,9 @@
 
 
 <div class="map-section">
-  <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3415.177743506721!2d80.95163785462165!3d26.774817974288503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfb712140d289%3A0xaac66eb8f2c2b914!2sVishishth%20Park%2C%20Amar%20Shaheed%20Path%2C%20Babhnan%20Basti%2C%20Vrindavan%20Colony%2C%20Lucknow%2C%20Uttar%20Pradesh%20226029!5e0!3m2!1sen!2sin!4v1624079296660!5m2!1sen!2sin" frameborder="0" allowfullscreen></iframe>
+  <iframe style="border:0; width: 100%; height: 350px;"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3415.177743506721!2d80.95163785462165!3d26.774817974288503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfb712140d289%3A0xaac66eb8f2c2b914!2sVishishth%20Park%2C%20Amar%20Shaheed%20Path%2C%20Babhnan%20Basti%2C%20Vrindavan%20Colony%2C%20Lucknow%2C%20Uttar%20Pradesh%20226029!5e0!3m2!1sen!2sin!4v1624079296660!5m2!1sen!2sin"
+    frameborder="0" allowfullscreen></iframe>
 
 </div>
 
@@ -99,7 +101,7 @@
 
     <div class="row mt-5 justify-content-center" data-aos="fade-up">
       <div class="col-lg-10">
-        <form  method="post" role="form" class="email-form">
+        <form method="post" role="form" class="email-form">
           <div class="row">
             <div class="col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -127,7 +129,3 @@
 
   </div>
 </section><!-- End Contact Section -->
-
-
-
-
