--- a/src/app/user/checkout/checkout.component.html
+++ b/src/app/user/checkout/checkout.component.html
@@ -17,16 +17,16 @@
             <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
             <input type="text" id="adr" name="address" placeholder="Address" formControlName="address">
             <label for="city"><i class="fa fa-institution"></i> City</label>
-            <input type="text" id="city" name="city" placeholder="Lucknow" >
+            <input type="text" id="city" name="city" placeholder="Lucknow"  formControlName="city">
 
             <div class="row">
               <div class="col-50">
                 <label for="state">State</label>
-                <input type="text" id="state" name="state" placeholder="UP">
+                <input type="text" id="state" name="state" placeholder="UP" formControlName="state">
               </div>
               <div class="col-50">
                 <label for="zip">Pin Code</label>
-                <input type="text" id="zip" name="zip" placeholder="226002">
+                <input type="text" id="zip" name="zip" placeholder="226002" formControlName="pin">
               </div>
             </div>
           </div>
