--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
 
 
         <li class="dropdown"><a [routerLink]="['/app/aboutus']" routerLinkActive="router-link-active" ><span>About</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
+          <!-- <ul>
             <li><a [routerLink]="['/app/aboutus']" routerLinkActive="router-link-active" >About Us</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a [routerLink]="['/app/listrequests']" routerLinkActive="router-link-active" >posts</a></li>
@@ -25,7 +25,7 @@
             </li>
           </ul>
         </li>
-        <!-- dropdown novel list -->
+        dropdown novel list -->
 
         <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
@@ -37,7 +37,6 @@
 
         <!-- <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Novels</a></li> -->
         <li><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Profile</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
         <li><a [routerLink]="['/app/listrequests']" routerLinkActive="router-link-active">Posts</a></li>
         <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
 
