--- a/src/app/user/checkout/checkout.component.html
+++ b/src/app/user/checkout/checkout.component.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form [formGroup]="checkOutDetails" (ngSubmit)="submitCheckOutDetails">
+      <form>
 
         <div class="row">
           <div class="col-50">
