--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,8 +37,8 @@
         dropdown novel list -->
 
         <!-- <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Novels</a></li> -->
-        <li><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Profile</a></li>
-        <li><a [routerLink]="['/app/listrequests']" routerLinkActive="router-link-active">Posts</a></li>
+        <li><a [routerLink]="['/user']" routerLinkActive="router-link-active">Profile</a></li>
+        <li><a [routerLink]="['/app/listrequest']" routerLinkActive="router-link-active">Posts</a></li>
         <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
 
       </ul>
@@ -73,7 +73,7 @@
               can get it from our website.
             </p>
 
-            <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+            <!-- <div class="text-center"><a href="" class="btn-get-started">Read More</a></div> -->
           </div>
         </div>
       </div>
