cancel order added

--- a/src/app/user/manage-user-orders/manage-user-orders.component.html
+++ b/src/app/user/manage-user-orders/manage-user-orders.component.html
@@ -42,6 +42,10 @@
           <p class="price">{{order.data.novel.price | currency:'INR'}}</p>
           <hr>
 
+          <div class="col text-center">
+            <button class="col-10" nbButton hero (click)="cancelOrder(order._id)" status  ="danger">Cancel Order</button>
+        </div>
+
         </nb-accordion-item-body>
       </nb-accordion-item>
     </nb-accordion>
